--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <h3>Order Preview:</h3>
       <pre id="generatedOrder" class="order-preview"></pre>
     </div>
+    <button id="copyAndSendOrderBtn2" onclick="copyAndSendOrderReceipt()">Copy Text & Share</button>
     </div>
   
       <!-- Billing Form -->
@@ -136,7 +137,7 @@
             <h4>Proof of Delivery Image:</h4>
             <img id="imagePreview" src="" alt="Uploaded Image" style="max-width: 200px; display: none;">
                       <!-- Copy Text and Share Button (initially hidden) -->
-          <button id="copyAndSendBtn" onclick="copyAndSendReceipt()">Copy Text & Share</button>
+          <button id="copyAndSendBtn" onclick="copyAndSendBillingReceipt()">Copy Text & Share</button>
           </div>
         </div>
         
